{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 923,
  "lineage": "8c473ee6-43f2-7957-bda9-285980e646e9",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:loadbalancer/app/tokyo-web-alb/9411680864cd40d0",
            "arn_suffix": "app/tokyo-web-alb/9411680864cd40d0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tokyo-web-alb-756070991.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:loadbalancer/app/tokyo-web-alb/9411680864cd40d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tokyo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d4962352ed4fe3f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b49a57d3e0b54ad8"
              },
              {
                "subnet_id": "subnet-0f0f9ecc042c705ae"
              }
            ],
            "subnets": [
              "subnet-0b49a57d3e0b54ad8",
              "subnet-0f0f9ecc042c705ae"
            ],
            "vpc_id": "vpc-0720325b174f18952",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:listener/app/tokyo-web-alb/9411680864cd40d0/af5989a5821bb861",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:listener/app/tokyo-web-alb/9411680864cd40d0/af5989a5821bb861",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:loadbalancer/app/tokyo-web-alb/9411680864cd40d0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b",
            "arn_suffix": "targetgroup/web-tg/88cb36892785095b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:loadbalancer/app/tokyo-web-alb/9411680864cd40d0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b-2024062007385844760000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b",
            "target_id": "i-0fdcb0aaf0c01f802"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.web_instance",
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b-2024062007385851850000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:699822842316:targetgroup/web-tg/88cb36892785095b",
            "target_id": "i-07324b7237c3e9231"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.web_instance",
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fe1d9214628296",
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:instance/i-0fdcb0aaf0c01f802",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdcb0aaf0c01f802",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eefd75f4ea8898cc",
            "private_dns": "ip-10-0-11-251.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b648479ea0f0e5d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3541343f0836567",
            "tags": {
              "Name": "web-instance-0"
            },
            "tags_all": {
              "Name": "web-instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5f6e010557c1bc3"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fe1d9214628296",
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:instance/i-07324b7237c3e9231",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07324b7237c3e9231",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0375036326a009300",
            "private_dns": "ip-10-0-12-161.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b6d484a72e482403",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d34d6fe5eb93900",
            "tags": {
              "Name": "web-instance-1"
            },
            "tags_all": {
              "Name": "web-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5f6e010557c1bc3"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5bbe4bce5f3ebea",
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:elastic-ip/eipalloc-0e5bbe4bce5f3ebea",
            "association_id": "eipassoc-0c78eee8fdee45673",
            "domain": "vpc",
            "id": "eipalloc-0e5bbe4bce5f3ebea",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0bd78900d360e1c53",
            "private_dns": "ip-10-0-1-157.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-18-180-69-83.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.69.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0ebc415401956d3",
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:elastic-ip/eipalloc-0e0ebc415401956d3",
            "association_id": "eipassoc-0ad5b804669aee18e",
            "domain": "vpc",
            "id": "eipalloc-0e0ebc415401956d3",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0643926896988d8b0",
            "private_dns": "ip-10-0-2-98.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.98",
            "public_dns": "ec2-13-113-88-162.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.113.88.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:internet-gateway/igw-07dd023134e76b032",
            "id": "igw-07dd023134e76b032",
            "owner_id": "699822842316",
            "tags": {
              "Name": "Tokyo_igw"
            },
            "tags_all": {
              "Name": "Tokyo_igw"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5bbe4bce5f3ebea",
            "association_id": "eipassoc-0c78eee8fdee45673",
            "connectivity_type": "public",
            "id": "nat-0ec39f9f0217b5e03",
            "network_interface_id": "eni-0bd78900d360e1c53",
            "private_ip": "10.0.1.157",
            "public_ip": "18.180.69.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b49a57d3e0b54ad8",
            "tags": {
              "Name": "Tokyo_natgw01"
            },
            "tags_all": {
              "Name": "Tokyo_natgw01"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0ebc415401956d3",
            "association_id": "eipassoc-0ad5b804669aee18e",
            "connectivity_type": "public",
            "id": "nat-0ea2801a7789d82bf",
            "network_interface_id": "eni-0643926896988d8b0",
            "private_ip": "10.0.2.98",
            "public_ip": "13.113.88.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f0f9ecc042c705ae",
            "tags": {
              "Name": "Tokyo_natgw02"
            },
            "tags_all": {
              "Name": "Tokyo_natgw02"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dd023134e76b032",
            "id": "r-rtb-0cf1abeb0c8e768ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf1abeb0c8e768ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-069e678bce4ab1d9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ec39f9f0217b5e03",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069e678bce4ab1d9a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1282a0de84eea141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ea2801a7789d82bf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1282a0de84eea14",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:route-table/rtb-069e678bce4ab1d9a",
            "id": "rtb-069e678bce4ab1d9a",
            "owner_id": "699822842316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec39f9f0217b5e03",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "PrivateRouteTable-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720325b174f18952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:route-table/rtb-0b1282a0de84eea14",
            "id": "rtb-0b1282a0de84eea14",
            "owner_id": "699822842316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ea2801a7789d82bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "PrivateRouteTable-ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720325b174f18952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:route-table/rtb-0cf1abeb0c8e768ba",
            "id": "rtb-0cf1abeb0c8e768ba",
            "owner_id": "699822842316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dd023134e76b032",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tokyo_public_route_table"
            },
            "tags_all": {
              "Name": "Tokyo_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720325b174f18952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091d901defed74bac",
            "route_table_id": "rtb-069e678bce4ab1d9a",
            "subnet_id": "subnet-0b3541343f0836567"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet_db",
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe3546c8e299ebfd",
            "route_table_id": "rtb-0b1282a0de84eea14",
            "subnet_id": "subnet-05d34d6fe5eb93900"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet_db",
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a71ebcdc670f3c4",
            "route_table_id": "rtb-069e678bce4ab1d9a",
            "subnet_id": "subnet-0fd7fae7aa7189fe1"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet_db",
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079e76d3e6e856c1a",
            "route_table_id": "rtb-0b1282a0de84eea14",
            "subnet_id": "subnet-0e5a15444a5fe38c1"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet_db",
            "module.network.aws_subnet.private_subnet_web",
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fadd437ab84d072",
            "route_table_id": "rtb-0cf1abeb0c8e768ba",
            "subnet_id": "subnet-0b49a57d3e0b54ad8"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7186cdded6d3bcb",
            "route_table_id": "rtb-0cf1abeb0c8e768ba",
            "subnet_id": "subnet-0f0f9ecc042c705ae"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:subnet/subnet-0fd7fae7aa7189fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd7fae7aa7189fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699822842316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo_dbnet01"
            },
            "tags_all": {
              "Name": "Tokyo_dbnet01"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:subnet/subnet-0e5a15444a5fe38c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5a15444a5fe38c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699822842316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo_dbnet02"
            },
            "tags_all": {
              "Name": "Tokyo_dbnet02"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:subnet/subnet-0b3541343f0836567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3541343f0836567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699822842316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo_webnet01"
            },
            "tags_all": {
              "Name": "Tokyo_webnet01"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:subnet/subnet-05d34d6fe5eb93900",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d34d6fe5eb93900",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699822842316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo_webnet02"
            },
            "tags_all": {
              "Name": "Tokyo_webnet02"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:subnet/subnet-0b49a57d3e0b54ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49a57d3e0b54ad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699822842316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo_pubnet01"
            },
            "tags_all": {
              "Name": "Tokyo_pubnet01"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:subnet/subnet-0f0f9ecc042c705ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0f9ecc042c705ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699822842316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo_pubnet02"
            },
            "tags_all": {
              "Name": "Tokyo_pubnet02"
            },
            "vpc_id": "vpc-0720325b174f18952"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:vpc/vpc-0720325b174f18952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033ee43520fbd296d",
            "default_route_table_id": "rtb-0f10c3d2cd72aa63e",
            "default_security_group_id": "sg-01ddf425c1cc8f638",
            "dhcp_options_id": "dopt-0208887a029bf0ee7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0720325b174f18952",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f10c3d2cd72aa63e",
            "owner_id": "699822842316",
            "tags": {
              "Name": "vpc01"
            },
            "tags_all": {
              "Name": "vpc01"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:security-group/sg-0d4962352ed4fe3f1",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4962352ed4fe3f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "699822842316",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0720325b174f18952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:security-group/sg-0105b94d9580b8087",
            "description": "Database security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105b94d9580b8087",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5f6e010557c1bc3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "699822842316",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0720325b174f18952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:699822842316:security-group/sg-0a5f6e010557c1bc3",
            "description": "EC2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5f6e010557c1bc3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4962352ed4fe3f1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "699822842316",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0720325b174f18952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc01",
            "module.security.aws_security_group.alb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}